--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 			justify-self: flex-end;
 		}
 	</style>
-	<script src="js/muse.js" type="module"></script>
+	<script src="js/muse.js" type="module" async></script>
 </head>
 <body>
 	<nav>
